syntax = "proto3";

package com.hugo.demo.product;

option java_multiple_files = true;

message ProductEntity {
  string metal_id= 1;
  int64 provider_id = 2;
  string product_description = 3;
  string product_name = 4;
  double product_value = 5;
  double stock = 6;
}

message PaginatedProducts {
  repeated ProductEntity products = 1;
  int32 total_items = 2;
  int32 total_pages = 3;
  bool has_previous_page = 4;
  bool has_next_page = 5;
}

message ProductFilter {
  string product_name = 1;
  string metal_id = 2;
  int32 stock_lower_limit = 3;
  int32 stock_upper_limit = 4;
  double product_value_lower_limit = 5;
  double product_value_upper_limit = 6;
  string sort_by = 7;
  int32 page = 8;
  int32 page_size = 9;
  int64 provider_id = 10;
}

